Fix contact button to middle when on mobile device

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 30% 58%;
   gap: 12%;
-  margin-bottom: 7rem;
+  margin-bottom: 9rem;
 }
 
 .contact__options {
@@ -68,5 +68,9 @@ textarea {
 @media screen and (max-width: 600px) {
   .container.contact__container {
     width: var(--container-width-sm);
+  }
+
+  button {
+    margin: 0 auto;
   }
 }
